src-tauri/src/ytdlp/snapshots/ymd_lib__ytdlp__args__tests__download_combo_everything_mp3.snap
---
source: src/ytdlp/args.rs
expression: download_args(&s)
---
- "--ignore-config"
- "--color"
- never
- "--encoding"
- utf-8
- "--newline"
- "--progress"
- "--no-simulate"
- "--progress-template"
- "download:YMD|%(progress)j"
- "--progress-template"
- "postprocess:YMD_PP|%(progress.status)s|%(progress.postprocessor)s"
- "--print"
- "before_dl:YMD_META|%(title)s"
- "--print"
- "before_dl:YMD_ITEM|%(playlist_autonumber)s|%(n_entries)s"
- "--print"
- "after_move:YMD_FILE|%(filepath)s"
- "-P"
- "home:C:\\Users\\user\\Videos"
- "-P"
- "temp:C:\\Users\\user\\AppData\\Roaming\\com.ymd.app\\tmp\\job-1"
- "-o"
- "%(playlist,playlist_id|playlist)s/%(playlist_index)s - %(title)s [%(id)s].%(ext)s"
- "--windows-filenames"
- "-N"
- "4"
- "--download-archive"
- "C:\\Users\\user\\AppData\\Roaming\\com.ymd.app\\download-archive.txt"
- "--ffmpeg-location"
- "C:\\Users\\user\\AppData\\Local\\ymd\\bin"
- "--no-js-runtimes"
- "--js-runtimes"
- "deno:C:\\Users\\user\\AppData\\Local\\ymd\\bin\\deno.exe"
- "--downloader"
- "C:\\Users\\user\\AppData\\Local\\ymd\\bin\\aria2c.exe"
- "--downloader-args"
- "aria2c:-x 8 -s 8 -k 1M"
- "-f"
- ba/b
- "-x"
- "--audio-format"
- mp3
- "--audio-quality"
- 320K
- "--embed-thumbnail"
- "--embed-metadata"
- "--yes-playlist"
- "--playlist-items"
- "1,3,7"
- "--cookies-from-browser"
- "brave:Default"
- "--video-password"
- hunter2
- "--"
- "https://www.youtube.com/watch?v=YE7VzlLtp-4"
