src-tauri/src/ytdlp/snapshots/ymd_lib__ytdlp__args__tests__download_mp3-320_unix.snap
---
source: src/ytdlp/args.rs
expression: args
---
- "--ignore-config"
- "--color"
- never
- "--encoding"
- utf-8
- "--newline"
- "--progress"
- "--no-simulate"
- "--progress-template"
- "download:YMD|%(progress)j"
- "--progress-template"
- "postprocess:YMD_PP|%(progress.status)s|%(progress.postprocessor)s"
- "--print"
- "before_dl:YMD_META|%(title)s"
- "--print"
- "before_dl:YMD_ITEM|%(playlist_autonumber)s|%(n_entries)s"
- "--print"
- "after_move:YMD_FILE|%(filepath)s"
- "-P"
- "home:/home/user/Videos"
- "-P"
- "temp:/home/user/.local/share/com.ymd.app/tmp/job-1"
- "-o"
- "%(title)s [%(id)s].%(ext)s"
- "--windows-filenames"
- "-N"
- "4"
- "--ffmpeg-location"
- /usr/bin
- "--no-js-runtimes"
- "--js-runtimes"
- "node:/usr/bin/node"
- "-f"
- ba/b
- "-x"
- "--audio-format"
- mp3
- "--audio-quality"
- 320K
- "--embed-thumbnail"
- "--embed-metadata"
- "--no-playlist"
- "--"
- "https://www.youtube.com/watch?v=YE7VzlLtp-4"
